Issue #15: Add Solr indexing support for variants Major refactoring of the variant service code.