@@ -1,5 +1,21 @@
+/*
+ *    Copyright 2011-2012 University of Toronto
+ *
+ *    Licensed under the Apache License, Version 2.0 (the "License");
+ *    you may not use this file except in compliance with the License.
+ *    You may obtain a copy of the License at
+ *
+ *        http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *    Unless required by applicable law or agreed to in writing, software
+ *    distributed under the License is distributed on an "AS IS" BASIS,
+ *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *    See the License for the specific language governing permissions and
+ *    limitations under the License.
+ */
 package org.ut.biolab.medsavant.server.solr;
 
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.http.HttpResponse;
@@ -7,14 +23,20 @@ import org.apache.http.client.HttpClient;
 import org.apache.http.client.methods.HttpGet;
 import org.apache.http.client.methods.HttpUriRequest;
 import org.apache.http.impl.client.DefaultHttpClient;
+import org.ut.biolab.medsavant.server.solr.service.VariantData;
+import org.ut.biolab.medsavant.server.solr.service.VariantService;
+import org.ut.biolab.medsavant.shared.util.EncodingConstants;
 
 import java.io.*;
 import java.net.URLEncoder;
 import java.util.Random;
 
+@Deprecated
 public class SimpleVariantClient {
 
     private static HttpClient httpClient = new DefaultHttpClient();
+
+    private static VariantService variantService = new VariantService();
 
     private static final String SOLR_HOST = "http://localhost:8983/solr/";
 
@@ -23,27 +45,6 @@ public class SimpleVariantClient {
     private static final String SEARCH_HANDLER = "/select";
 
     private static final Log LOG = LogFactory.getLog(SimpleVariantClient.class);
-
-    public long generateAndExecuteSimpleQuery() {
-
-        String id = getRandomParameter(VariantTestConstants.ids);
-        String dna_id = getRandomParameter(VariantTestConstants.dna_ids);
-        String alt = getRandomParameter(VariantTestConstants.alts);
-        String chrom = getRandomParameter(VariantTestConstants.chroms);
-        String ref = getRandomParameter(VariantTestConstants.refs);
-        String zygosity = getRandomParameter(VariantTestConstants.zygosities);
-
-        SimpleSolrQuery simpleSolrQuery = new SimpleSolrQuery();
-        simpleSolrQuery.addQueryTerm("id", id);
-        simpleSolrQuery.addQueryTerm("dna_id", dna_id);
-        simpleSolrQuery.addQueryTerm("alt", alt);
-        simpleSolrQuery.addQueryTerm("chrom", chrom);
-        simpleSolrQuery.addQueryTerm("ref", ref);
-        simpleSolrQuery.addFilterQueryTerm("zygosity", zygosity);
-
-        return executeQueryForTime(simpleSolrQuery);
-    }
-
 
     /**
      * Execute the query and return the content of the HTTP response as a String.
@@ -63,7 +64,6 @@ public class SimpleVariantClient {
             httpResponse = httpClient.execute(httpGet);
 
             responseString = getResponseContentAsString(httpResponse);
-
         } catch (IOException e) {
             LOG.error("Failed to execute the Query", e);
         }
@@ -77,22 +77,22 @@ public class SimpleVariantClient {
      * @return          -1 if there was an error or a positive number representing the number of milliseconds needed to
      *                  execute the query if no error occured.
      */
+    @Deprecated
     public long executeQueryForTime(SimpleSolrQuery query) {
 
         String queryString = query.getFullSolrQuery();
 
         String safeURL = SOLR_HOST + CORE + SEARCH_HANDLER + "?" + queryString;
 
-        //FIXME this is ugly
         try {
-            safeURL = URLEncoder.encode(safeURL , "UTF-8");
+            safeURL = URLEncoder.encode(safeURL , EncodingConstants.UTF_8);
         } catch (UnsupportedEncodingException e) {
             LOG.error("Failed to safely encode request string");
         }
 
-        HttpUriRequest httpGet = new HttpGet("(" + safeURL + ")");
+        HttpUriRequest httpGet = new HttpGet(safeURL);
 
-        HttpResponse httpResponse = null;
+        HttpResponse httpResponse;
         String responseString = null;
 
         long start = System.currentTimeMillis();
@@ -102,8 +102,6 @@ public class SimpleVariantClient {
         try {
 
             httpResponse = httpClient.execute(httpGet);
-
-
             getResponseContentAsString(httpResponse);
 
             end = System.currentTimeMillis();
@@ -131,8 +129,8 @@ public class SimpleVariantClient {
 
         try {
             httpResponseInputStream = httpResponse.getEntity().getContent();
+            contentString = IOUtils.toString(httpResponseInputStream, EncodingConstants.UTF_8);
 
-            contentString =  inputStreamToString(httpResponseInputStream);
         } catch (IOException e) {
             LOG.error("Failed to retrieve content of HTTP response", e);
         }
@@ -152,7 +150,6 @@ public class SimpleVariantClient {
         String line;
 
         StringBuilder sb = new StringBuilder();
-
         BufferedReader br  = new BufferedReader( new InputStreamReader(inputStream));
         while ( (line = br.readLine() ) != null) {
             sb.append(line);
@@ -160,16 +157,6 @@ public class SimpleVariantClient {
 
         return sb.toString();
     }
-
-    private String getRandomParameter(String[] vector) {
-        Random random = new Random();
-
-        int index = random.nextInt(vector.length);
-
-        return vector[index];
-    }
-
-
 
 
 
